# full-stack-template

./: .cursorrules  .flowconfig  .flowconfig-example  .gitignore  .travis.yml  CONFIGURATION.md  CONTACTS.md  DEVELOPMENT.md  Jenkinsfile  LICENSE  LICENSE.md  PROJECT.md  README.md  TAITOLESS.md  azure-pipelines.yml  bitbucket-pipelines.yml  build.sh  buildspec.yml  cloudbuild-template.yaml  cloudbuild.yaml  contacts.md  docker-compose-cicd.yaml  docker-compose-remote.yaml  docker-compose-test.yaml  docker-compose.yaml  docker-crontab  docker-nginx.conf  docker-nginx.htpasswd  git-workflow.md  graphql.config.ts  help.txt  local-ci.sh  package-lock.json  package.json  taito-config.sh  taito-domain-config.sh  taito-env-all-config.sh  taito-env-prod-config.sh  taito-environments-config.sh  taito-project-config.sh  (+6 more)
alternatives/server-flask/: Dockerfile  Dockerfile.build  README.md  blog.nginx.conf  blog.uwsgi.ini  nginx.conf  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-prod.in  requirements-prod.txt  requirements.in  requirements.txt  setup.py  test.sh  uwsgi.ini
alternatives/server-flask/blog/: __init__.py  config.py  db.py  routes.py  storage.py
alternatives/server-flask/blog/common/: formatters.py
alternatives/server-flask/blog/posts/: db.py  (+3 more)
alternatives/server-flask/src/: __init__.py  api.py  bootstrap.py  config.py  log.py  logs.py  messagebus.py  sentry.py  wsgi.py
alternatives/server-flask/test/: conftest.py  test_factory.py  test_infra.py  test_posts.py
alternatives/server-flask/tests/: conftest.py  test_post.py
(+1872 files in other folders)
