[tool.poetry]
name = "full-stack-template-server"
version = "0.1.0"
description = "Python server backend for the Taito Full Stack Template"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-bandit = "^3.0.0"
mypy = "^0.971"
pytest = "^7.1.2"
safety = "^2.1.1"
boto3-stubs = {extras = ["s3"], version = "^1.24.60.post1"}
watchdog = {extras = ["watchmedo"], version = "^2.2.0"}


[tool.black]
line-length = 79

[tool.poetry.dependencies]
python = "^3.10"
uWSGI = "^2.0.20"
Flask = "^2.2.2"
boto3 = "^1.24.60"
python-json-logger = "^2.0.4"
sentry-sdk = {extras = ["flask"], version = "^1.9.5"}
requests = "^2.28.1"
strawberry-graphql = {extras = ["debug-server"], version = "^0.151.0"}
punq = "^0.6.2"
pydantic = "^1.10.2"
makefun = "^1.15.0"
marshmallow = "^3.19.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
